Add local user management API
